syntax = "proto3";
package hivemind;

service Hivemind {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc GetKeyValue (GetKeyValueRequest) returns (GetKeyValueReply);
    rpc SetKeyValue (SetKeyValueRequest) returns (SetKeyValueReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}


message GetKeyValueRequest {
    string name = 1;
}

message GetKeyValueReply {
    string message = 1;
}

message SetKeyValueRequest {
    string name = 1;
}

message SetKeyValueReply {
    string message = 1;
}
